tests/Support/override/classes/error/response/DebugErrorPage.php
<?php

namespace Thirtybees\Core\Error\Response;

class DebugErrorPage extends DebugErrorPageCore
{

}
